--- a/lxd/podman-in-lxd.yaml
+++ b/lxd/podman-in-lxd.yaml
@@ -3,7 +3,9 @@
 # Podman-in-LXD Installation and Configuration
 # Run Podman containers inside LXD system containers
 # Podman is daemonless and rootless by default
-# Pinned versions for stability (Ubuntu 24.04 LTS / Ubuntu 22.04 LTS container)
+# Pinned versions for stability (Ubuntu 24.04 LTS)
+# LXD snap: 6.1/stable | Container images: nginx 1.28.2 | podman-compose 1.5.0
+# Note: Podman packages inside LXD containers follow the container OS repo (Ubuntu 22.04)
 
 package_update: true
 package_upgrade: true
@@ -86,7 +88,7 @@ write_files:
       echo "Installing Podman..."
       lxc exec "$CONTAINER_NAME" -- apt-get update
       lxc exec "$CONTAINER_NAME" -- apt-get install -y podman slirp4netns fuse-overlayfs uidmap python3-pip
-      lxc exec "$CONTAINER_NAME" -- pip3 install podman-compose
+      lxc exec "$CONTAINER_NAME" -- pip3 install podman-compose==1.5.0
       
       echo "Configuring rootless Podman for ubuntu user..."
       lxc exec "$CONTAINER_NAME" -- bash -c 'echo "ubuntu:100000:65536" >> /etc/subuid'
@@ -100,10 +102,10 @@ write_files:
       echo "=== Podman setup complete in $CONTAINER_NAME ==="
       echo ""
       echo "Run containers as root:"
-      echo "  lxc exec $CONTAINER_NAME -- podman run --rm docker.io/alpine echo hello"
+      echo "  lxc exec $CONTAINER_NAME -- podman run --rm docker.io/alpine:3.21 echo hello"
       echo ""
       echo "Run containers as ubuntu (rootless):"
-      echo "  lxc exec $CONTAINER_NAME -- sudo -u ubuntu podman run --rm docker.io/alpine echo hello"
+      echo "  lxc exec $CONTAINER_NAME -- sudo -u ubuntu podman run --rm docker.io/alpine:3.21 echo hello"
 
 runcmd:
   # Ensure snapd is ready
@@ -145,7 +147,7 @@ runcmd:
   - lxc exec podman-host -- apt-get install -y podman slirp4netns fuse-overlayfs uidmap python3-pip
 
   # Install podman-compose via pip
-  - lxc exec podman-host -- pip3 install podman-compose
+  - lxc exec podman-host -- pip3 install podman-compose==1.5.0
 
   # Configure subuid/subgid for rootless podman
   - lxc exec podman-host -- bash -c 'grep -q "^ubuntu:" /etc/subuid || echo "ubuntu:100000:65536" >> /etc/subuid'
@@ -157,8 +159,8 @@ runcmd:
   - lxc exec podman-host -- chown -R ubuntu:ubuntu /home/ubuntu/.local
 
   # Pull nginx image and run container
-  - lxc exec podman-host -- podman pull docker.io/nginx:alpine
-  - lxc exec podman-host -- podman run -d --name web --restart always -p 80:80 docker.io/nginx:alpine
+  - lxc exec podman-host -- podman pull docker.io/nginx:1.28.2-alpine3.23
+  - lxc exec podman-host -- podman run -d --name web --restart always -p 80:80 docker.io/nginx:1.28.2-alpine3.23
 
   # Add proxy device to expose container's port 80 on VM port 8080
   - lxc config device add podman-host http proxy listen=tcp:0.0.0.0:8080 connect=tcp:127.0.0.1:80
@@ -182,10 +184,10 @@ final_message: |
   lxc exec podman-host -- podman images
   
   === Run More Containers ===
-  lxc exec podman-host -- podman run -d --name myapp -p 8081:80 docker.io/nginx
+  lxc exec podman-host -- podman run -d --name myapp -p 8081:80 docker.io/nginx:1.28.2-alpine3.23
   
   === Rootless Podman (as ubuntu user) ===
-  lxc exec podman-host -- sudo -u ubuntu podman run --rm docker.io/alpine echo hello
+  lxc exec podman-host -- sudo -u ubuntu podman run --rm docker.io/alpine:3.21 echo hello
   
   === Create Another Podman Host ===
   lxc launch ubuntu:22.04 my-podman --profile default --profile podman
