--- a/Podman/podman.yaml
+++ b/Podman/podman.yaml
@@ -1,13 +1,17 @@
 #cloud-config
 
+# Podman Installation and Configuration
+# Pinned versions for stability (Ubuntu 24.04 LTS)
+# Podman: 4.9.3 | podman-docker: 4.9.3
+
 # Update package lists on first boot
 package_update: true
 package_upgrade: true
 
 # Install required packages (removed flatpak/GUI - not needed in headless VM)
 packages:
-  - podman
-  - podman-docker
+  - podman=4.9.3+ds1-1ubuntu0.2
+  - podman-docker=4.9.3+ds1-1ubuntu0.2
   - curl
   - wget
   - git
@@ -87,7 +91,7 @@ write_files:
       systemctl --user status podman.socket
       echo ""
       echo "Running hello-world container..."
-      podman run --rm hello-world
+      podman run --rm hello-world:linux
       echo ""
       echo "Podman info:"
       podman info
