--- a/incus/incus.yaml
+++ b/incus/incus.yaml
@@ -3,7 +3,8 @@
 # Incus Installation and Configuration
 # System container and VM management with Incus (LXD fork by Linux Containers)
 # Installed via Zabbly repository for Ubuntu 24.04 LTS
-# Pinned to Incus 6.x LTS for stability
+# Pinned to Incus LTS 6.0 channel (Zabbly lts-6.0 repo)
+# Note: Packages inside Incus containers follow the container OS repo versions (Ubuntu 22.04)
 
 package_update: true
 package_upgrade: true
@@ -161,6 +162,7 @@ runcmd:
   - incus launch images:ubuntu/22.04 web-test
   - sleep 10
   - incus exec web-test -- apt-get update
+  # Install nginx inside container (version from container's Ubuntu 22.04 repo)
   - incus exec web-test -- apt-get install -y nginx
   - incus exec web-test -- systemctl enable nginx
   - incus exec web-test -- systemctl start nginx
